[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-http"
version = "2.1.0"
description = "Micro HTTP server and client for Python and MicroPython"
readme = "README.md"
authors = [
    {name = "Pavel Revak", email = "pavelrevak@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "uhttp-server>=2.1.0",
    "uhttp-client>=2.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pavelrevak/uhttp"
Repository = "https://github.com/pavelrevak/uhttp"
